# post-chess

./: .gitignore  CMakeLists.txt
.github/workflows/: README.md  ai-regression.yml  release.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
src/engine/ai/: AI.cpp  AI.hpp  AIRegressionTester.cpp  AIRegressionTester.hpp  MoveSorter.cpp  MoveSorter.hpp  PassedPawnMasks.hpp  SearchInterrupter.cpp  SearchInterrupter.hpp  StaticEvaluator.cpp  StaticEvaluator.hpp  TranspositionTable.cpp  TranspositionTable.hpp
src/engine/base/moveGeneration/: KingMasks.hpp  KnightMasks.hpp  LegalMoveGen.cpp  LegalMoveGen.hpp  LegalMoveGenTester.cpp  LegalMoveGenTester.hpp  MoveList.cpp  MoveList.hpp  PsLegalMoveMaskGen.cpp  PsLegalMoveMaskGen.hpp  SlidersMasks.hpp
src/engine/base/positionRepresentation/: Bitboard.hpp  Move.cpp  Move.hpp  Pieces.cpp  Pieces.hpp  Position.cpp  Position.hpp  RepetitionHistory.cpp  RepetitionHistory.hpp  ZobristHash.cpp  ZobristHash.hpp  ZobristHashConstants.hpp
src/ui/: Storage.cpp  Storage.hpp  UI.cpp  UI.hpp
